增加项目单总经理与CEO设置页面

--- a/EmpInfo/EmpInfo.csproj
+++ b/EmpInfo/EmpInfo.csproj
@@ -1686,6 +1686,7 @@
     <Content Include="Views\ApplyExtra\UpdateMTEqInfo.cshtml" />
     <Content Include="Views\Apply\CheckMTApply.cshtml" />
     <Content Include="Views\Apply\BeginAuditMTApply.cshtml" />
+    <Content Include="Views\ApplyExtra\XAAuditorSetting.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
