增加设备类申请单流程

--- a/EmpInfo/EmpInfo.csproj
+++ b/EmpInfo/EmpInfo.csproj
@@ -481,6 +481,9 @@
     <Compile Include="Models\ei_xaApplySupplier.cs">
       <DependentUpon>InfoDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ei_xbApply.cs">
+      <DependentUpon>InfoDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\EmergencyEnum.cs" />
     <Compile Include="Models\EpModels.cs" />
     <Compile Include="Models\flow_apply.cs">
@@ -783,6 +786,7 @@
     <Compile Include="Services\TISv.cs" />
     <Compile Include="Services\UCSv.cs" />
     <Compile Include="Services\WxSv.cs" />
+    <Compile Include="Services\XBSv.cs" />
     <Compile Include="Services\XASv.cs" />
     <Compile Include="Util\BillUtils.cs" />
     <Compile Include="Util\MyEmail.cs" />
@@ -1055,6 +1059,7 @@
     <Content Include="Content\images\user_woman.png" />
     <Content Include="Content\images\warn.png" />
     <Content Include="Content\images\xa.png" />
+    <Content Include="Content\images\xb.png" />
     <Content Include="Content\login.css" />
     <Content Include="Content\select2.min.css" />
     <Content Include="Content\skins\all.css" />
@@ -1687,6 +1692,10 @@
     <Content Include="Views\Apply\CheckMTApply.cshtml" />
     <Content Include="Views\Apply\BeginAuditMTApply.cshtml" />
     <Content Include="Views\ApplyExtra\XAAuditorSetting.cshtml" />
+    <Content Include="Views\Apply\BeginApplyXB.cshtml" />
+    <Content Include="Views\Apply\CheckXBApply.cshtml" />
+    <Content Include="Views\Apply\BeginAuditXBApply.cshtml" />
+    <Content Include="Views\Report\XBReport.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
