--- a/EmpInfo/packages.config
+++ b/EmpInfo/packages.config
@@ -3,6 +3,8 @@
   <package id="cn.jpush.api" version="3.3.1" targetFramework="net401" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net401" />
   <package id="EntityFramework.zh-Hans" version="5.0.0" targetFramework="net401" />
+  <package id="ExcelDataReader" version="3.6.0" targetFramework="net401" />
+  <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net401" />
   <package id="jpush.api" version="1.1.2.27869" targetFramework="net401" />
   <package id="jQuery" version="1.8.2" targetFramework="net401" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net401" />
@@ -34,5 +36,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net401" />
   <package id="Modernizr" version="2.6.2" targetFramework="net401" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net401" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net401" />
   <package id="WebGrease" version="1.3.0" targetFramework="net401" />
 </packages>
